🎨 CORES SIMPLES: Bolinha vermelho→laranja→amarelo→verde mantendo animação original

--- a/index.html
+++ b/index.html
@@ -903,13 +903,13 @@
                 transform: translateY(-50%) scale(1);
             }
             33% {
-                left: calc(33.33% - 15px);
-                background: #FFCE52;
+                left: calc(33.33% - 14px);
+                background: #FF8C42;
                 transform: translateY(-50%) scale(1);
             }
             66% {
-                left: calc(66.67% - 15px);
-                background: #00A650;
+                left: calc(66.67% - 14px);
+                background: #FFCE52;
                 transform: translateY(-50%) scale(1);
             }
             85% {
@@ -955,14 +955,14 @@
             opacity: 1;
             transform: translate(-50%, -50%) scale(1.1);
             transition: opacity 0.4s ease 2.94s, transform 0.4s ease 2.94s;
-            animation: smokeAppearDisappear 2.4s ease 2.94s forwards;
+            animation: smokeAppearDisappear 1.4s ease 2.94s forwards;
         }
 
         @keyframes smokeAppearDisappear {
             0% {
                 opacity: 1;
             }
-            83.33% {
+            71.43% {
                 opacity: 1;
             }
             100% {
