🌐 FUMACINHA GITHUB: Usa URL direta do GitHub para evitar conflitos de merge

--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
             opacity: 0;
             z-index: -1;
             transition: all 0.3s ease;
-            background-image: url('./assets/images/fumacinha.png');
+            background-image: url('https://raw.githubusercontent.com/fersalves/landing-merchants/main/assets/images/fumacinha.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
