🚀 TÍTULO IMPACTANTE: '¡Más ventas, más créditos! Prioriza Mercado Pago en tu negocio' - call to action poderoso

--- a/index.html
+++ b/index.html
@@ -1391,7 +1391,7 @@
     <!-- Requirements Section -->
     <section class="requirements">
         <div class="container">
-            <h2 class="section-title animated-title" id="requirements-title">Entre más vendas y uses Mercado Pago, más crédito te damos</h2>
+            <h2 class="section-title animated-title" id="requirements-title">¡Más ventas, más créditos! Prioriza Mercado Pago en tu negocio</h2>
             <div class="requirements-cards">
                 <div class="requirement-card card1">
                     <h3>Vende más de $500 por<br>2 meses en Mercado Libre<br>o Mercado Pago</h3>
