--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         .animated-words {
             animation: wordSlide 10s infinite;
-            animation-timing-function: cubic-bezier(0.23, 1, 0.32, 1); /* Gentle easing like Figma */
+            animation-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94); /* Gentle easing similar to Figma */
             transform: translateY(0);
         }
 
@@ -163,54 +163,26 @@
         }
 
         @keyframes wordSlide {
-            0% { 
-                transform: translateY(0);
-            }
-            22% { 
-                transform: translateY(0);
-            }
-            24% { 
-                transform: translateY(-15px);
-            }
-            26% { 
-                transform: translateY(-105px);
-            }
-            28% { 
-                transform: translateY(-120px);
-            }
-            47% { 
-                transform: translateY(-120px);
-            }
-            49% { 
-                transform: translateY(-135px);
-            }
-            51% { 
-                transform: translateY(-225px);
-            }
-            53% { 
-                transform: translateY(-240px);
-            }
-            72% { 
-                transform: translateY(-240px);
-            }
-            74% { 
-                transform: translateY(-255px);
-            }
-            76% { 
-                transform: translateY(-345px);
-            }
-            78% { 
-                transform: translateY(-360px);
-            }
-            97% { 
-                transform: translateY(-360px);
-            }
-            99% { 
-                transform: translateY(-375px);
-            }
-            100% { 
-                transform: translateY(-480px);
-            }
+            0% { transform: translateY(0); }
+            22% { transform: translateY(0); }
+            23% { transform: translateY(-3px); } /* Micro movimento de ajuste */
+            24% { transform: translateY(-117px); } /* Ligeiramente abaixo */
+            25% { transform: translateY(-123px); } /* Ligeiramente acima */
+            26% { transform: translateY(-120px); } /* Posição final */
+            47% { transform: translateY(-120px); }
+            48% { transform: translateY(-123px); } /* Micro movimento de ajuste */
+            49% { transform: translateY(-237px); } /* Ligeiramente abaixo */
+            50% { transform: translateY(-243px); } /* Ligeiramente acima */
+            51% { transform: translateY(-240px); } /* Posição final */
+            72% { transform: translateY(-240px); }
+            73% { transform: translateY(-243px); } /* Micro movimento de ajuste */
+            74% { transform: translateY(-357px); } /* Ligeiramente abaixo */
+            75% { transform: translateY(-363px); } /* Ligeiramente acima */
+            76% { transform: translateY(-360px); } /* Posição final */
+            97% { transform: translateY(-360px); }
+            98% { transform: translateY(-363px); } /* Micro movimento de ajuste */
+            99% { transform: translateY(-477px); } /* Ligeiramente abaixo */
+            100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
 
         .hero-subtitle {
