🎯 TIMING SUAVIZADO: Movimento de descida mais lento na micro animação para maior fluidez

--- a/index.html
+++ b/index.html
@@ -166,22 +166,22 @@
             0% { transform: translateY(0); }
             22% { transform: translateY(0); }
             23% { transform: translateY(-6px); } /* Micro movimento de ajuste */
-            24% { transform: translateY(-114px); } /* Ligeiramente abaixo */
-            25% { transform: translateY(-126px); } /* Ligeiramente acima */
-            26% { transform: translateY(-120px); } /* Posição final */
+            24.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
+            25.5% { transform: translateY(-126px); } /* Ligeiramente acima */
+            26.5% { transform: translateY(-120px); } /* Posição final */
             47% { transform: translateY(-120px); }
             48% { transform: translateY(-126px); } /* Micro movimento de ajuste */
-            49% { transform: translateY(-234px); } /* Ligeiramente abaixo */
-            50% { transform: translateY(-246px); } /* Ligeiramente acima */
-            51% { transform: translateY(-240px); } /* Posição final */
+            49.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
+            50.5% { transform: translateY(-246px); } /* Ligeiramente acima */
+            51.5% { transform: translateY(-240px); } /* Posição final */
             72% { transform: translateY(-240px); }
             73% { transform: translateY(-246px); } /* Micro movimento de ajuste */
-            74% { transform: translateY(-354px); } /* Ligeiramente abaixo */
-            75% { transform: translateY(-366px); } /* Ligeiramente acima */
-            76% { transform: translateY(-360px); } /* Posição final */
+            74.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
+            75.5% { transform: translateY(-366px); } /* Ligeiramente acima */
+            76.5% { transform: translateY(-360px); } /* Posição final */
             97% { transform: translateY(-360px); }
             98% { transform: translateY(-366px); } /* Micro movimento de ajuste */
-            99% { transform: translateY(-474px); } /* Ligeiramente abaixo */
+            99.5% { transform: translateY(-474px); } /* Ligeiramente abaixo - movimento mais lento */
             100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
 
