--- a/index.html
+++ b/index.html
@@ -165,22 +165,31 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); }
             22% { transform: translateY(0); }
-            23% { transform: translateY(-6px); } /* Micro movimento de ajuste */
+            23% { transform: translateY(-6px); } /* Primeiro micro movimento */
             24.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
             25.5% { transform: translateY(-126px); } /* Ligeiramente acima */
-            26.5% { transform: translateY(-120px); } /* Posição final */
+            26.5% { transform: translateY(-120px); } /* Posição intermediária */
+            27% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo */
+            27.5% { transform: translateY(-123px); } /* Segundo micro movimento - acima */
+            28% { transform: translateY(-120px); } /* Posição final estabilizada */
             47% { transform: translateY(-120px); }
-            48% { transform: translateY(-126px); } /* Micro movimento de ajuste */
+            48% { transform: translateY(-126px); } /* Primeiro micro movimento */
             49.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
             50.5% { transform: translateY(-246px); } /* Ligeiramente acima */
-            51.5% { transform: translateY(-240px); } /* Posição final */
+            51.5% { transform: translateY(-240px); } /* Posição intermediária */
+            52% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo */
+            52.5% { transform: translateY(-243px); } /* Segundo micro movimento - acima */
+            53% { transform: translateY(-240px); } /* Posição final estabilizada */
             72% { transform: translateY(-240px); }
-            73% { transform: translateY(-246px); } /* Micro movimento de ajuste */
+            73% { transform: translateY(-246px); } /* Primeiro micro movimento */
             74.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
             75.5% { transform: translateY(-366px); } /* Ligeiramente acima */
-            76.5% { transform: translateY(-360px); } /* Posição final */
+            76.5% { transform: translateY(-360px); } /* Posição intermediária */
+            77% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo */
+            77.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima */
+            78% { transform: translateY(-360px); } /* Posição final estabilizada */
             97% { transform: translateY(-360px); }
-            98% { transform: translateY(-366px); } /* Micro movimento de ajuste */
+            98% { transform: translateY(-366px); } /* Primeiro micro movimento */
             99.5% { transform: translateY(-474px); } /* Ligeiramente abaixo - movimento mais lento */
             100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
