🕰️ MICRO MOVIMENTOS SUAVES: Timing expandido para transições mais elegantes e relaxadas

--- a/index.html
+++ b/index.html
@@ -165,32 +165,31 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); }
             22% { transform: translateY(0); }
-            23% { transform: translateY(-6px); } /* Primeiro micro movimento */
-            24.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
-            25.5% { transform: translateY(-126px); } /* Ligeiramente acima */
-            26.5% { transform: translateY(-120px); } /* Posição intermediária */
-            27% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo */
-            27.5% { transform: translateY(-123px); } /* Segundo micro movimento - acima */
-            28% { transform: translateY(-120px); } /* Posição final estabilizada */
+            23.5% { transform: translateY(-6px); } /* Primeiro micro movimento - mais lento */
+            25% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
+            26% { transform: translateY(-126px); } /* Ligeiramente acima */
+            27% { transform: translateY(-120px); } /* Posição intermediária */
+            27.8% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo - mais lento */
+            28.6% { transform: translateY(-123px); } /* Segundo micro movimento - acima - mais lento */
+            29.4% { transform: translateY(-120px); } /* Posição final estabilizada - mais lento */
             47% { transform: translateY(-120px); }
-            48% { transform: translateY(-126px); } /* Primeiro micro movimento */
-            49.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
-            50.5% { transform: translateY(-246px); } /* Ligeiramente acima */
-            51.5% { transform: translateY(-240px); } /* Posição intermediária */
-            52% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo */
-            52.5% { transform: translateY(-243px); } /* Segundo micro movimento - acima */
-            53% { transform: translateY(-240px); } /* Posição final estabilizada */
+            48.5% { transform: translateY(-126px); } /* Primeiro micro movimento - mais lento */
+            50% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
+            51% { transform: translateY(-246px); } /* Ligeiramente acima */
+            52% { transform: translateY(-240px); } /* Posição intermediária */
+            52.8% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo - mais lento */
+            53.6% { transform: translateY(-243px); } /* Segundo micro movimento - acima - mais lento */
+            54.4% { transform: translateY(-240px); } /* Posição final estabilizada - mais lento */
             72% { transform: translateY(-240px); }
-            73% { transform: translateY(-246px); } /* Primeiro micro movimento */
-            74.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
-            75.5% { transform: translateY(-366px); } /* Ligeiramente acima */
-            76.5% { transform: translateY(-360px); } /* Posição intermediária */
-            77% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo */
-            77.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima */
-            78% { transform: translateY(-360px); } /* Posição final estabilizada */
+            73.5% { transform: translateY(-246px); } /* Primeiro micro movimento - mais lento */
+            75% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
+            76% { transform: translateY(-366px); } /* Ligeiramente acima */
+            77% { transform: translateY(-360px); } /* Posição intermediária */
+            77.8% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - mais lento */
+            78.6% { transform: translateY(-363px); } /* Segundo micro movimento - acima - mais lento */
+            79.4% { transform: translateY(-360px); } /* Posição final estabilizada - mais lento */
             97% { transform: translateY(-360px); }
-            98% { transform: translateY(-366px); } /* Primeiro micro movimento */
-            99.5% { transform: translateY(-474px); } /* Ligeiramente abaixo - movimento mais lento */
+            98.5% { transform: translateY(-366px); } /* Primeiro micro movimento - mais lento */
             100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
 
