🌊 ULTRA SUAVE: Micro interações ainda mais lentas para máxima elegância e contemplação

--- a/index.html
+++ b/index.html
@@ -165,31 +165,31 @@
         @keyframes wordSlide {
             0% { transform: translateY(0); }
             22% { transform: translateY(0); }
-            23.5% { transform: translateY(-6px); } /* Primeiro micro movimento - mais lento */
-            25% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
-            26% { transform: translateY(-126px); } /* Ligeiramente acima */
-            27% { transform: translateY(-120px); } /* Posição intermediária */
-            27.8% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo - mais lento */
-            28.6% { transform: translateY(-123px); } /* Segundo micro movimento - acima - mais lento */
-            29.4% { transform: translateY(-120px); } /* Posição final estabilizada - mais lento */
+            24% { transform: translateY(-6px); } /* Primeiro micro movimento - ultra suave */
+            25.5% { transform: translateY(-114px); } /* Ligeiramente abaixo - movimento mais lento */
+            26.5% { transform: translateY(-126px); } /* Ligeiramente acima */
+            27.5% { transform: translateY(-120px); } /* Posição intermediária */
+            28.5% { transform: translateY(-117px); } /* Segundo micro movimento - abaixo - ultra suave */
+            29.5% { transform: translateY(-123px); } /* Segundo micro movimento - acima - ultra suave */
+            30.5% { transform: translateY(-120px); } /* Posição final estabilizada - ultra suave */
             47% { transform: translateY(-120px); }
-            48.5% { transform: translateY(-126px); } /* Primeiro micro movimento - mais lento */
-            50% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
-            51% { transform: translateY(-246px); } /* Ligeiramente acima */
-            52% { transform: translateY(-240px); } /* Posição intermediária */
-            52.8% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo - mais lento */
-            53.6% { transform: translateY(-243px); } /* Segundo micro movimento - acima - mais lento */
-            54.4% { transform: translateY(-240px); } /* Posição final estabilizada - mais lento */
+            49% { transform: translateY(-126px); } /* Primeiro micro movimento - ultra suave */
+            50.5% { transform: translateY(-234px); } /* Ligeiramente abaixo - movimento mais lento */
+            51.5% { transform: translateY(-246px); } /* Ligeiramente acima */
+            52.5% { transform: translateY(-240px); } /* Posição intermediária */
+            53.5% { transform: translateY(-237px); } /* Segundo micro movimento - abaixo - ultra suave */
+            54.5% { transform: translateY(-243px); } /* Segundo micro movimento - acima - ultra suave */
+            55.5% { transform: translateY(-240px); } /* Posição final estabilizada - ultra suave */
             72% { transform: translateY(-240px); }
-            73.5% { transform: translateY(-246px); } /* Primeiro micro movimento - mais lento */
-            75% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
-            76% { transform: translateY(-366px); } /* Ligeiramente acima */
-            77% { transform: translateY(-360px); } /* Posição intermediária */
-            77.8% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - mais lento */
-            78.6% { transform: translateY(-363px); } /* Segundo micro movimento - acima - mais lento */
-            79.4% { transform: translateY(-360px); } /* Posição final estabilizada - mais lento */
+            74% { transform: translateY(-246px); } /* Primeiro micro movimento - ultra suave */
+            75.5% { transform: translateY(-354px); } /* Ligeiramente abaixo - movimento mais lento */
+            76.5% { transform: translateY(-366px); } /* Ligeiramente acima */
+            77.5% { transform: translateY(-360px); } /* Posição intermediária */
+            78.5% { transform: translateY(-357px); } /* Segundo micro movimento - abaixo - ultra suave */
+            79.5% { transform: translateY(-363px); } /* Segundo micro movimento - acima - ultra suave */
+            80.5% { transform: translateY(-360px); } /* Posição final estabilizada - ultra suave */
             97% { transform: translateY(-360px); }
-            98.5% { transform: translateY(-366px); } /* Primeiro micro movimento - mais lento */
+            99% { transform: translateY(-366px); } /* Primeiro micro movimento - ultra suave */
             100% { transform: translateY(-480px); } /* Posição final (loop) */
         }
 
