--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
             position: absolute;
             bottom: 110px;
             right: 30px;
-            transform: translateY(100%);
+            transform: translateX(100%);
             width: 240px;
             height: 68px;
             background: rgba(255, 255, 255, 0.12);
@@ -665,7 +665,7 @@
             position: absolute;
             bottom: 30px;
             right: 30px;
-            transform: translateY(100%);
+            transform: translateX(100%);
             width: 240px;
             height: 68px;
             background: rgba(255, 255, 255, 0.12);
@@ -679,22 +679,22 @@
         }
 
         .requirement-card.card1:hover:not(.animated) .hover-card {
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
         .requirement-card.card1:hover:not(.animated) .hover-card-2 {
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
         .requirement-card.card1.animated .hover-card {
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
         .requirement-card.card1.animated .hover-card-2 {
-            transform: translateY(0);
+            transform: translateX(0);
             opacity: 1;
         }
 
